# grengin-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE_ENTERPRISE.md  README.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml  post-create.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20250102_000001_add_redirect_url_to_sso_providers.rs  m20250107_000001_create_usage_logs.rs  m20250107_000002_create_usage_summary_daily.rs  m20250201_000001_make_previous_message_id_nullable.rs  m20250201_000002_add_request_id_to_messages.rs  m20251125_000001_create_users.rs  m20251125_000002_create_oauth_sessions.rs  m20251125_000003_create_conversations.rs  m20251125_000004_create_messages.rs  m20251125_000005_create_prompt_templates.rs  m20251211_000005_add_deleted_to_messages.rs  m20251216_000001_create_organizations.rs  m20251216_000002_add_org_id_to_users.rs  m20251218_000001_create_ai_engines.rs  m20251218_000001_create_files.rs  m20251218_000001_drop_users_email_unique.rs  m20251229_000001_create_sso_providers.rs
src/: app.rs  error.rs  main.rs  sample.env  state.rs
src/auth/: azure.rs  claims.rs  encryption.rs  error.rs  google.rs  jwt.rs  mod.rs  sso_provider.rs
src/config/: setting.rs
src/docs/: app_error_catlog.rs  auth_error_catlog.rs  mod.rs  openapis.rs  security.rs
src/dto/: admin.rs  admin_ai.rs  admin_department.rs  admin_org.rs  admin_sso_providers.rs  admin_user.rs  analytics.rs  auth.rs  chat.rs  chat_stream.rs  common.rs  files.rs  mod.rs  models.rs  oauth.rs  openai.rs  sso_providers.rs
src/dto/llm/: anthropic.rs  gemini.rs  groq.rs  mod.rs  openai.rs
src/handlers/: admin.rs  admin_ai.rs  admin_analytics.rs  admin_department.rs  admin_org.rs  admin_sso_provider.rs  admin_users.rs  auth.rs  chat.rs  chat_stream.rs  file.rs  files.rs  google_oauth.rs  message.rs  mod.rs  models.rs  oidc.rs  open_error.rs
src/handlers/llm/: anthropic.rs  gemini.rs  groq.rs  mod.rs  openai.rs
src/llm/: anthropic.rs  gemini.rs  groq.rs  mod.rs  openai.rs  prompt.rs  provider.rs
src/models/: ai_engines.rs  conversations.rs  files.rs  messages.rs  mod.rs  oauth_sessions.rs  organization.rs  organizations.rs  prompt_templates.rs  sso_providers.rs  usage_logs.rs  usage_summary_daily.rs  users.rs
src/routes/: admin.rs  auth.rs  chat.rs  file.rs  files.rs  google.rs  message.rs  mod.rs  models.rs  oidc.rs  open_error.rs  swagger_ui.rs
src/services/: aggregation.rs  analytics.rs  mod.rs
swagger-overrides/: custom.css  index.html
