[package]
name = "grengin-api"
version = "0.1.86"
edition = "2024"

[workspace]
members = [".","migration"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
base64 = "0.22"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json", "multipart"] } 
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono","with-json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
migration = { path = "migration" }
async-stream = "0.3.6"
openidconnect = "4.0.1"
async-trait = "0.1.89"
serde_with = { version = "3.16.1", features = ["base64"] }
tower-http = { version = "0.6.7", features = ["cors"] }
openssl = { version = "0.10.75", features = ["vendored"] }
num-traits = "0.2.19"
futures-util = "0.3.31"
reqwest-eventsource = "0.6.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "url", "uuid"] }
