[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls","with-json", "with-uuid", "with-chrono", "sqlx-mysql", "sqlx-postgres"] }
tokio = { version = "1", features = ["full", "macros", "rt", "rt-multi-thread"] }
